# synchronization-test-between-django-and-db

./: README.md  models.py  pyproject.toml  race_condition_test.ipynb  view_table_test.ipynb
config/: settings.py
sql_dump/: full_info_for_stock_order_202312140102.sql  functions.sql  item_code_in_order_202312140102.sql  items_202312140101.sql  stock_202312140101.sql  stock_order_202312140101.sql  user_order_202312140101.sql
sync/: admin.py  models.py
sync/management/commands/: seed_items.py  seed_stock.py  seed_stock_order.py  seed_user_order.py  seed_users.py
sync/migrations/: 0001_initial.py  0002_remove_items_items_group_idx_items_item_expiration_and_more.py  0003_userorder_address.py  0004_alter_items_options_alter_stock_options_and_more.py  0005_remove_userorder_order_number.py
