[tool.poetry]
name = "synchronization-test-between-django-and-db"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"
psycopg2-binary = "^2.9.9"
django-extensions = "^3.2.3"
ipython = {extras = ["notebook"], version = "^8.18.1"}
notebook = "^7.0.6"
jupyter = "^1.0.0"
django-seed = "^0.3.1"
pillow = "^10.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
